# quotedb

./: .gitignore  MANIFEST.in  Notes.md  README.md  maxtime.sql  projectenv  requirements.txt  setup.cfg
models/: candlesmodel.py  dbconnection.py  finntickmodel.py  holidaymodel.py  managekeys.py  polytrademodel.py  quotemodel.py  trademodel.py
qexceptions/: qexception.py
quotedb/: TradeConditionsTickDataUS_CTA_UTP.csv  dbconnection.py  getdata.py  nasdaq_screener_1616893735151.csv  sp500.py
quotedb/finnhub/: barebones_ws.py  finncandles.py  finntrade_ws.py  stockquote.py
quotedb/models/: allquotes_candlemodel.py  candlesmodel.py  common.py  finntickmodel.py  firstquotemodel.py  holidaymodel.py  holidays.csv  managecandles.py  managekeys.py  managetopquotes.py  metamod.py  polytrademodel.py  quotemodel.py  stocklists.py  topquotes_candlemodel.py  trademodel.py
quotedb/polygon/: polytrade.py
quotedb/scheduler/: schedule.py
quotedb/scripts/: env.py  installtestdb.py  isrunning.py  kill_from_pid.py  panic_kill_candles.py  runscript.py  startcandles.py  visualizethis.py
quotedb/test/: cmdline_test2.py  mytest6_part_1.py  mytest6_part_2.py  report.py  test_common.py  test_finncandles.py  test_firstquotemodel.py  test_holidaymodel.py  test_installtestdb.py  test_managecandles.py  test_managekeys.py  (+2 more)
scheduler/: schedule.py
scripts/: env.py  getcandles.py  visualizethis.py
sql/: maxtime.sql
stockdata/: dbconnection.py  getdata.py  polytrade.py  sp500.py  stockquote.py  trades.py
test/: test_managekeys.py  test_stockquote.py
utils/: util.py
(+10 files in other folders)
