[metadata]
name = quotedb
version = 1.0.0
author = pentsok
author_email = pentsok@zerosubstance.org
description = Stock data gathering tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MikePia/quotedb

project_urls = 
    Server =  https://151.106.32.17/

classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 



[flake8]
max-line-length = 150