[metadata]
name = quotedb
version = 1.0.7.002
author = pentsok
author_email = pentsok@zerosubstance.org
description = Stock data gathering tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MikePia/quotedb

project_urls = 
    Server = http://ec2-3-134-100-24.us-east-2.compute.amazonaws.com:8000/

classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
include_package_data = True
packages = find:
python_requires = >=3.6


[flake8]
max-line-length = 150